[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/pistol_p.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/akimbo_pistol_p.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("extra_hand:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("extra_hand:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -1, 1, 1 ) ]
}

[node name="akimbo_pistol_p" type="Spatial"]
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": "akimbo"
}

[node name="pistol_p" parent="." instance=ExtResource( 1 )]

[node name="extra_hand" type="Spatial" parent="."]
transform = Transform( -1, 0, 0, 0, -1, 0, 0, 0, -1, 0, 0, 0 )

[node name="pistol_p2" parent="extra_hand" instance=ExtResource( 1 )]

[node name="hacky_anim_player" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 1 )

[editable path="pistol_p"]
[editable path="extra_hand/pistol_p2"]
